--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="hero-section">
         <div class="hero-section__logo">
-            <img  src="../src/svg/hero-logo.svg" alt=""/>
+            <img  src="../src/svg/hero-logo.svg"/>
         </div>      
         <div class="hero-section__info">
             <span>ОПИСАНИЕ</span>
@@ -26,7 +26,7 @@
     </section>
 
     <section class="section-desc">
-        <img class="section-desc__image" src='../src/image/img1.png' alt=""/>
+        <img class="section-desc__image" src='../src/image/img1.png'/>
         <div class="section-desc__content">
             <h3>Отчет об интересах компании</h3>
             <p>Два века назад мы планировали использовать невиданную мощь этого существа для создания биологического оружия, но теперь понимаем, насколько больше может дать нам этот вид.</p>
@@ -46,7 +46,7 @@
             <p>Проследовав к источнику сигнала, команда обнаружила заброшенный инопланетный корабль, трюм которого был полон яиц ксеноморфов.</p>
             <p>Менее чем за двадцать четыре часа ксеноморф убил всех членов команды, кроме одного, продемонстрировав при этом поразительное совершенство своих инстинктов и формы.</p>
         </div>
-        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img2.png'  alt=""/>
+        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img2.png'/>
     </section>
 
     <section class="section-desc section-desc--grey">
@@ -56,7 +56,7 @@
     </section>
 
     <section class="section-desc">
-        <img class="section-desc__image" src='../src/image/img3.png' alt=""/>
+        <img class="section-desc__image" src='../src/image/img3.png'/>
         <div class="section-desc__content">
             <h3>Новое начало</h3>
             <p>За более чем столетние работы с ксеноморфом ВСОС проявили катастрофическую некомпетентность и самоуверенную халатность.</p>
@@ -76,11 +76,11 @@
             <p>Учитывая последние достижения в области сверхсветовых полетов, поиски в глубоком космосе должны занять считаные дни вместо недель, недели вместо месяцев.</p>
             <p>У нас еще никогда не было настолько серьезных шансов найти и поймать ксеноморфа.</p>
         </div>
-        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img4.png'  alt="" />
+        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img4.png'/>
     </section>
 
     <section class="section-desc section-desc--blue">
-        <img class="section-desc__image section-desc__image--on-blue" src='../src/image/img5.png'  alt=""/>
+        <img class="section-desc__image section-desc__image--on-blue" src='../src/image/img5.png'/>
         <div class="section-desc__content section-desc__content--on-blue">
             <h3>Применение в медицине</h3>
             <p>Регенерация ксеноморфов гораздо быстрее человеческой, и при всех известных контактах они не проявляли ни следа каких либо болезней.</p>
@@ -123,7 +123,7 @@
             <p>Если вы не являетесь ученым или не имеете возможности стать инвестором, но хотите быть частью грандиозных открытий, не отчаивайтесь, мы найдем для вас место.</p>
             <p>Как обычно, компания оценит ваш вклад и вашу преданность.</p>
         </div>
-        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img6.png'  alt=""/>
+        <img class="section-desc__image section-desc__image--on-right" src='../src/image/img6.png'/>
     </section>
 
     <section class="section-statement section-statement--blue">
