--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,15 @@
 
 
     <section class="section-logo">
-        <img src="../src/svg/logo-main.svg" alt=""/>
+        <img src="../src/svg/full-logo.svg" alt=""/>
     </section>
+
+		<section class="section-footer">
+			<span>
+					<p>Learning material</p>
+					<p>Codemasters International IT School</p>
+					<p>Prepared by Andrey Seregin</p>
+			</span>
+	</section>
 </body>
 </html>
