--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section class="section-description">
-        <img class="section-description__image" src='../src/image/img1.png'/>
+        <img class="section-description__image" src='../src/image/allien1.png'/>
         <div class="section-description__content">
             <h3>Отчет об интересах компании</h3>
             <p>Два века назад мы планировали использовать невиданную мощь этого существа для создания биологического оружия, но теперь понимаем, насколько больше может дать нам этот вид.</p>
@@ -45,7 +45,7 @@
             <p>Проследовав к источнику сигнала, команда обнаружила заброшенный инопланетный корабль, трюм которого был полон яиц ксеноморфов.</p>
             <p>Менее чем за двадцать четыре часа ксеноморф убил всех членов команды, кроме одного, продемонстрировав при этом поразительное совершенство своих инстинктов и формы.</p>
         </div>
-        <img class="section-description__image section-description__image--on-right" src='../src/image/img2.png'/>
+        <img class="section-description__image section-description__image--on-right" src='../src/image/allien2.png'/>
     </section>
 
     <section class="section-description section-description--grey">
@@ -55,7 +55,7 @@
     </section>
 
     <section class="section-description">
-        <img class="section-description__image" src='../src/image/img3.png'/>
+        <img class="section-description__image" src='../src/image/allien3.png'/>
         <div class="section-description__content">
             <h3>Новое начало</h3>
             <p>За более чем столетние работы с ксеноморфом ВСОС проявили катастрофическую некомпетентность и самоуверенную халатность.</p>
@@ -75,11 +75,11 @@
             <p>Учитывая последние достижения в области сверхсветовых полетов, поиски в глубоком космосе должны занять считаные дни вместо недель, недели вместо месяцев.</p>
             <p>У нас еще никогда не было настолько серьезных шансов найти и поймать ксеноморфа.</p>
         </div>
-        <img class="section-description__image section-description__image--on-right" src='../src/image/img4.png'/>
+        <img class="section-description__image section-description__image--on-right" src='../src/image/allien4.png'/>
     </section>
 
     <section class="section-description section-desc--blue">
-        <img class="section-description__image section-description__image--on-blue" src='../src/image/img5.png'/>
+        <img class="section-description__image section-description__image--on-blue" src='../src/image/allien5.png'/>
         <div class="section-description__content section-description__content--on-blue">
             <h3>Применение в медицине</h3>
             <p>Регенерация ксеноморфов гораздо быстрее человеческой, и при всех известных контактах они не проявляли ни следа каких либо болезней.</p>
@@ -126,7 +126,7 @@
             <p>Если вы не являетесь ученым или не имеете возможности стать инвестором, но хотите быть частью грандиозных открытий, не отчаивайтесь, мы найдем для вас место.</p>
             <p>Как обычно, компания оценит ваш вклад и вашу преданность.</p>
         </div>
-        <img class="section-description__image section-description__image--on-right" src='../src/image/img6.png'/>
+        <img class="section-description__image section-description__image--on-right" src='../src/image/allien6.png'/>
     </section>
 
     <section class="section-slogan section-slogan--blue">
